--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 32683/32683 [02:37<00:00, 207.55it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "labels = []\n",
     "\n",
@@ -167,16 +175,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17.330229671011793,\n",
+       " 9.83409651285664,\n",
+       " 228.84426229508196,\n",
+       " 109.05859375,\n",
+       " 11.344575375863469,\n",
+       " 23.304674457429048,\n",
+       " 17.170356703567037,\n",
+       " 5.42537893509522,\n",
+       " 34.768368617683684,\n",
+       " 153.4010989010989,\n",
+       " 35.206809583858764,\n",
+       " 93.37458193979933,\n",
+       " 22.940838126540672,\n",
+       " 157.73446327683618,\n",
+       " 82.11470588235294,\n",
+       " 228.84426229508196,\n",
+       " 50.854280510018214,\n",
+       " 81.15988372093022,\n",
+       " 1.0,\n",
+       " 35.70204603580562,\n",
+       " 41.11782032400589,\n",
+       " 1.4694983946523503,\n",
+       " 24.994628469113696,\n",
+       " 1.0,\n",
+       " 11.795099281791297,\n",
+       " 93.37458193979933,\n",
+       " 1.0]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "weights = np.sum(labels,axis=0)\n",
-    "weights = weights/np.max(weights)\n",
+    "weights = weights/labels.shape[0]\n",
+    "weights[np.where(weights == 0.)] = 1\n",
     "weights = 1/weights\n",
-    "weights\n",
-    "#weights = weights/np.max(weights)\n",
-    "weights.tolist()"
+    "weights = weights.tolist()\n",
+    "weights"
    ]
   },
   {
