--- a/notebooks/error_analysis.ipynb
+++ b/notebooks/error_analysis.ipynb
@@ -101,21 +101,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEBUG_PATH = './data/CV_debug/A/'\n",
-    "DATA_PATH = './data/A/formatted/'\n",
+    "DEBUG_PATH = './data/CV_debug/B/'\n",
+    "DATA_PATH = './data/B/formatted/'\n",
     "\n",
     "list_records = [i[:-5] for i in os.listdir(DEBUG_PATH) if i.find('.json')!=-1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dmitriishubin/Desktop/physionet-challenge-2020/utils/KPI_plots.py:54: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n"
+     ]
+    }
+   ],
    "source": [
     "# Main processing pipeline\n",
     "scores_errors = np.array([])\n",
@@ -137,6 +146,8 @@
     "    #calc score for each record\n",
     "    label = np.array(label).reshape(1,-1)\n",
     "    pred = np.array(pred).reshape(1,-1)\n",
+    "    pred = postprocessing.run(pred)\n",
+    "    #label, pred = postprocessing.find_opt_thresold(label, pred)\n",
     "    \n",
     "    scores_competition = np.append(scores_competition,competition_metric.compute(label, pred))\n",
     "    scores_errors = np.append(scores_errors,np.sum(np.abs(label - pred)))\n",
@@ -185,36 +196,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metric for dataset A:  0.48377572309037936\n"
+     ]
+    }
+   ],
    "source": [
     "print('Metric for dataset A: ',competition_metric.compute(labels, preds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: invalid value encountered in less\n",
+      "  \n",
+      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/ipykernel_launcher.py:3: RuntimeWarning: invalid value encountered in less\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/ipykernel_launcher.py:4: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    }
+   ],
    "source": [
     "#keeep records with errors only\n",
-    "records = records[np.where(scores_errors > 0)]\n",
-    "scores_errors = scores_errors[np.where(scores_errors > 0)]\n",
+    "records = records[np.where(scores_competition < 1)]\n",
+    "scores_competition = scores_competition[np.where(scores_competition <1)]\n",
+    "scores_competition = 1/scores_competition\n",
     "\n",
     "#TODO: clarify the type of sort\n",
-    "score_order = np.argsort(scores_errors)\n",
+    "score_order = np.argsort(scores_competition)\n",
     "records = records[score_order[::1]]\n",
     "\n",
     "#save a list of files in csv\n",
-    "pd.DataFrame(records).to_csv('./data/dataset_A_list.csv')"
+    "pd.DataFrame(records).to_csv('./data/dataset_B_list.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions:  [[0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0.]]\n",
+      "Label:        [0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "def plot_record(record):\n",
     "    \n",
@@ -231,25 +274,19 @@
     "    fig,ax = plt.subplots(figsize=(20,20))\n",
     "    fig.suptitle(record+', labels: '+str(meta['labels_full']))\n",
     "    for i in range(12):\n",
-    "        ax.plot(ecg[:,i]+500*i)\n",
+    "        ax.plot(ecg[:,i]+2000*i)\n",
     "    plt.show()\n",
     "    \n",
-    "    print('Predictions: ',np.array(pred))\n",
-    "    #print('Label:       ',meta['labels_training_merged'])\n",
+    "    pred = np.array(pred).reshape(1,-1)\n",
+    "    pred = postprocessing.run(pred)\n",
+    "    \n",
+    "    print('Predictions: ',pred)\n",
+    "    print('Label:       ',meta['labels_training_merged'])\n",
     "    return np.array(pred)\n",
     "\n",
     "record = records[0]\n",
     "\n",
     "pred = plot_record(record=record)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(pred == np.max(pred))[0][0]"
    ]
   },
   {
@@ -261,111 +298,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "postproc = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "DEBUG_PATH = './data/CV_debug/'\n",
     "DATASETS = ['A','B','D','E']\n",
     "\n",
+    "list_records = []\n",
+    "\n",
     "for dataset in DATASETS:\n",
-    "    list_records = [i[:-5] for i in os.listdir(f'./data/CV_debug/{dataset}/') if i.find('.json')!=-1]\n"
+    "    list_records += [i[:-5] for i in os.listdir(f'./data/CV_debug/{dataset}/') if i.find('.json')!=-1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/27 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding the optimal threshold\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-55f1f8c06eed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'predicted_label'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompetition_metric\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_opt_thresold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/physionet-challenge-2020/metrics/metrics.py\u001b[0m in \u001b[0;36mfind_opt_thresold\u001b[0;34m(self, labels, outputs)\u001b[0m\n\u001b[1;32m     76\u001b[0m                 \u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputs_thresholded\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m             \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 78\u001b[0;31m             \u001b[0mthreshold_opt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthreshold_grid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m27\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = []\n",
     "labels = []\n",
     "\n",
+    "preds_A = []\n",
+    "labels_A = []\n",
+    "\n",
+    "preds_B = []\n",
+    "labels_B = []\n",
+    "\n",
+    "preds_D = []\n",
+    "labels_D = []\n",
+    "\n",
+    "preds_E = []\n",
+    "labels_E = []\n",
+    "\n",
     "for record in list_records:\n",
     "    \n",
     "    if record[0] == 'A':\n",
-    "        data_folder = 'A'\n",
+    "        dataset = 'A'\n",
+    "        #print('A')\n",
     "\n",
     "    elif record[0] == 'Q':\n",
-    "        data_folder = 'B'\n",
+    "        dataset = 'B'\n",
+    "        #print('B')\n",
     "\n",
     "    elif record[0] == 'I':\n",
-    "        data_folder = 'C'\n",
+    "        dataset = 'C'\n",
+    "        #print('C')\n",
     "\n",
     "    elif record[0] == 'S':\n",
-    "        data_folder = 'D'\n",
+    "        dataset = 'D'\n",
+    "        #print('D')\n",
     "\n",
     "    elif record[0] == 'H':\n",
-    "        data_folder = 'E'\n",
+    "        dataset = 'E'\n",
+    "        #print('E')\n",
     "\n",
     "    elif record[0] == 'E':\n",
-    "        data_folder = 'F'\n",
+    "        dataset = 'F'\n",
+    "        #print('F')\n",
     "    \n",
-    "    pred_folder = f'./data/CV_debug/{data_folder}/'\n",
-    "    data_folder = f'./data/{data_folder}/formatted/'\n",
+    "    pred_folder = f'./data/CV_debug/{dataset}/'\n",
+    "    data_folder = f'./data/{dataset}/formatted/'\n",
     "    \n",
     "    \n",
     "    label = load_label(data_folder,record)\n",
     "    label = label['labels_training_merged']\n",
+    "    label = np.array(label).reshape(1,-1)\n",
     "    \n",
     "    pred = load_label(pred_folder,record)\n",
     "    pred = pred['predicted_label']\n",
+    "    pred = np.array(pred).reshape(1,-1)\n",
+    "#     pred[np.where(pred >= 0.1)] = 1\n",
+    "#     pred[np.where(pred < 0.1)] = 0\n",
+    "    pred = postprocessing.run(pred)\n",
+    "    #label, pred = competition_metric.find_opt_thresold(np.array(label).reshape(1,-1), np.array(pred).reshape(1,-1))\n",
     "    \n",
-    "    label, pred = competition_metric.find_opt_thresold(np.array(label).reshape(1,-1), np.array(pred).reshape(1,-1))\n",
+    "    preds.append(pred)\n",
+    "    labels.append(label)\n",
     "    \n",
-    "    break"
+    "    if dataset == 'A':\n",
+    "        preds_A.append(pred)\n",
+    "        labels_A.append(label)\n",
+    "    if dataset == 'B':\n",
+    "        preds_B.append(pred)\n",
+    "        labels_B.append(label)\n",
+    "    if dataset == 'D':\n",
+    "        preds_D.append(pred)\n",
+    "        labels_D.append(label)\n",
+    "    if dataset == 'E':\n",
+    "        preds_E.append(pred)\n",
+    "        labels_E.append(label)\n",
+    "    \n",
+    "preds = np.array(preds).reshape(-1,27)\n",
+    "labels = np.array(labels).reshape(-1,27)\n",
+    "\n",
+    "preds_A = np.array(preds_A).reshape(-1,27)\n",
+    "labels_A = np.array(labels_A).reshape(-1,27)\n",
+    "\n",
+    "preds_B = np.array(preds_B).reshape(-1,27)\n",
+    "labels_B = np.array(labels_B).reshape(-1,27)\n",
+    "\n",
+    "preds_D = np.array(preds_D).reshape(-1,27)\n",
+    "labels_D = np.array(labels_D).reshape(-1,27)\n",
+    "\n",
+    "preds_E = np.array(preds_E).reshape(-1,27)\n",
+    "labels_E = np.array(labels_E).reshape(-1,27)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score across all datasets:  0.5712336672902312\n",
+      "Score, dataset A:  0.756045772108003\n",
+      "Score, dataset B:  0.48377572309037936\n",
+      "Score, dataset D:  nan\n",
+      "Score, dataset E:  0.5216688832100651\n"
+     ]
+    }
+   ],
    "source": [
-    "pred"
+    "print('Score across all datasets: ',competition_metric.compute(labels, preds))\n",
+    "print('Score, dataset A: ',competition_metric.compute(labels_A, preds_A))\n",
+    "print('Score, dataset B: ',competition_metric.compute(labels_B, preds_B))\n",
+    "print('Score, dataset D: ',competition_metric.compute(labels_D, preds_D))\n",
+    "print('Score, dataset E: ',competition_metric.compute(labels_E, preds_E))"
    ]
   },
   {
