reduced patience for lr scheduler to 2

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -46,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "#DATASETS = ['A','B','C','D','E','F']\n",
-    "DATASETS = ['A','B','D','E'] #current for training\n",
+    "DATASETS = ['A','B','D','E','F'] #current for training\n",
     "#DATASETS = ['F']\n",
     "datalist = []\n",
     "\n",
@@ -145,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32683/32683 [02:37<00:00, 207.55it/s]\n"
+      "100%|██████████| 43027/43027 [03:14<00:00, 221.46it/s]\n"
      ]
     }
    ],
