resolved the issue with model checkpoints

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "#DATASETS = ['A','B','C','D','E','F']\n",
-    "DATASETS = ['A','B','D','E','F'] #current for training\n",
-    "#DATASETS = ['F']\n",
+    "#DATASETS = ['A','B','D','E'] #current for training\n",
+    "DATASETS = ['D']\n",
     "datalist = []\n",
     "\n",
     "for dataset in DATASETS:\n",
@@ -60,6 +60,26 @@
     "    for file in files:\n",
     "        datalist.append(f'./data/{dataset}/formatted/'+file)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "516"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(datalist)"
    ]
   },
   {
@@ -345,6 +365,62 @@
     "        print('===================')\n",
     "        if data == '../data/A/formatted/A2091':\n",
     "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Custom metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  1.,  1.,  1., -1.]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pred = np.array([1,1,0.2,0.3,0]).reshape(1,-1)\n",
+    "pred =  np.array([1,1,0,1,1]).reshape(1,-1)\n",
+    "label = np.array([1,1,0,1,0]).reshape(1,-1)\n",
+    "\n",
+    "pred = (pred - 0.5)*2\n",
+    "label = (label - 0.5)*2\n",
+    "\n",
+    "metric = pred*label\n",
+    "# metric = abs(metric)\n",
+    "metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(metric)"
    ]
   },
   {
