added relu layers after each outout conv

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DATASETS = ['A','B','C','D','E','F']\n",
+    "DATASETS = ['A','B','C','D','E','F']\n",
     "#DATASETS = ['A','B','D','E'] #current for training\n",
-    "DATASETS = ['D']\n",
+    "#DATASETS = ['D']\n",
     "datalist = []\n",
     "\n",
     "for dataset in DATASETS:\n",
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "516"
+       "43101"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,9 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 43101/43101 [47:57<00:00, 14.98it/s]      \n"
+     ]
+    }
+   ],
    "source": [
     "for data in tqdm(datalist):\n",
     "    signal = np.load(data+'.npy')\n",
